# LR7_2024

./: CMakeLists.txt  Lab_7.cpp  global_utils.cpp  global_utils.h
Task_1/: Task_1.cpp  task_1.h  utils_1.cpp
Task_2/: Task_2.cpp  task_2.h  utils_2.cpp
Task_3/: Task_3.cpp  task_3.h  utils_3.cpp
Task_4/: Task_4.cpp  task_4.h  utils_4.cpp
Task_5/: Task_5.cpp  structure_utils.cpp  task_5.h  utils_5.cpp
Task_5/include/: structure_utils.h  task_5.h  utils.h
Task_5/src/: Task_5.cpp  structure_utils.cpp  utils_5.cpp
